--- a/packages/nextjs/styles/globals.css
+++ b/packages/nextjs/styles/globals.css
@@ -46,3 +46,7 @@ html::view-transition-new(root),
 html[data-theme="scaffoldEthDark"]::view-transition-old(root) {
   z-index: 9999;
 }
+
+.layout-container {
+  @apply px-3 md:px-4 mx-auto w-full max-w-[84rem];
+}
